// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render default - value[0] 1`] = `
<span
  class="ant-badge"
  id="default"
>
  <div
    data-testid="area-content"
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
</span>
`;

exports[`Render properties.color - value[0] 1`] = `
<span
  class="ant-badge ant-badge-status"
  id="properties.color"
>
  <div
    data-testid="area-content"
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
</span>
`;

exports[`Render properties.count - value[0] 1`] = `
<span
  class="ant-badge"
  id="properties.count"
>
  <div
    data-testid="area-content"
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
  <sup
    class="ant-scroll-number ant-badge-count ant-badge-multiple-words"
    data-show="true"
    title="50"
  >
    <span
      class="ant-scroll-number-only"
      style="transition: none;"
    >
      <span
        class="ant-scroll-number-only-unit current"
      >
        5
      </span>
    </span>
    <span
      class="ant-scroll-number-only"
      style="transition: none;"
    >
      <span
        class="ant-scroll-number-only-unit current"
      >
        0
      </span>
    </span>
  </sup>
</span>
`;

exports[`Render properties.count: 0 - value[0] 1`] = `
<span
  class="ant-badge"
  id="properties.count: 0"
>
  <div
    data-testid="area-content"
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
</span>
`;

exports[`Render properties.dot: true - value[0] 1`] = `
<span
  class="ant-badge"
  id="properties.dot: true"
>
  <div
    data-testid="area-content"
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
  <sup
    class="ant-scroll-number ant-badge-dot"
    data-show="true"
  />
</span>
`;

exports[`Render properties.icon object - value[0] 1`] = `
<span
  class="ant-badge"
  id="properties.icon object"
>
  <div
    data-testid="area-content"
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
  <span
    class="anticon"
    role="img"
  >
    <svg
      data-testid="AiOutlineExclamationCircle"
    >
      {"id":"properties.icon object_icon","title":"AiOutlineNotification","className":"ant-scroll-number-custom-component","required":false,"style":{}}
    </svg>
  </span>
</span>
`;

exports[`Render properties.icon string - value[0] 1`] = `
<span
  class="ant-badge"
  id="properties.icon string"
>
  <div
    data-testid="area-content"
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
  <span
    class="anticon"
    role="img"
  >
    <svg
      data-testid="AiOutlineExclamationCircle"
    >
      {"id":"properties.icon string_icon","title":"AiOutlineNotification","className":"ant-scroll-number-custom-component","required":false,"style":{}}
    </svg>
  </span>
</span>
`;

exports[`Render properties.offset [x,y] - value[0] 1`] = `
<span
  class="ant-badge"
  id="properties.offset [x,y]"
>
  <div
    data-testid="area-content"
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
  <sup
    class="ant-scroll-number ant-badge-dot"
    data-show="true"
    style="margin-top: 10px; right: -25px;"
  />
</span>
`;

exports[`Render properties.overflowCount - value[0] 1`] = `
<span
  class="ant-badge"
  id="properties.overflowCount"
>
  <div
    data-testid="area-content"
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
  <sup
    class="ant-scroll-number ant-badge-count ant-badge-multiple-words"
    data-show="true"
    title="15"
  >
    10+
  </sup>
</span>
`;

exports[`Render properties.showZero - value[0] 1`] = `
<span
  class="ant-badge"
  id="properties.showZero"
>
  <div
    data-testid="area-content"
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
  <sup
    class="ant-scroll-number ant-badge-count"
    data-show="true"
    title="0"
  >
    0
  </sup>
</span>
`;

exports[`Render properties.size: small - value[0] 1`] = `
<span
  class="ant-badge"
  id="properties.size: small"
>
  <div
    data-testid="area-content"
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
  <sup
    class="ant-scroll-number ant-badge-count ant-badge-count-sm ant-badge-multiple-words"
    data-show="true"
    title="11"
  >
    <span
      class="ant-scroll-number-only"
      style="transition: none;"
    >
      <span
        class="ant-scroll-number-only-unit current"
      >
        1
      </span>
    </span>
    <span
      class="ant-scroll-number-only"
      style="transition: none;"
    >
      <span
        class="ant-scroll-number-only-unit current"
      >
        1
      </span>
    </span>
  </sup>
</span>
`;

exports[`Render properties.status: default - value[0] 1`] = `
<span
  class="ant-badge ant-badge-status"
  id="properties.status: default"
>
  <div
    data-testid="area-content"
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
</span>
`;

exports[`Render properties.status: error - value[0] 1`] = `
<span
  class="ant-badge ant-badge-status"
  id="properties.status: error"
>
  <div
    data-testid="area-content"
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
</span>
`;

exports[`Render properties.status: error and text: Error! - value[0] 1`] = `
<span
  class="ant-badge ant-badge-status"
  id="properties.status: error and text: Error!"
>
  <div
    data-testid="area-content"
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
</span>
`;

exports[`Render properties.status: processing - value[0] 1`] = `
<span
  class="ant-badge ant-badge-status"
  id="properties.status: processing"
>
  <div
    data-testid="area-content"
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
</span>
`;

exports[`Render properties.status: success - value[0] 1`] = `
<span
  class="ant-badge ant-badge-status"
  id="properties.status: success"
>
  <div
    data-testid="area-content"
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
</span>
`;

exports[`Render properties.title: When hovering over badge - value[0] 1`] = `
<span
  class="ant-badge"
  id="properties.title: When hovering over badge"
>
  <div
    data-testid="area-content"
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
  <sup
    class="ant-scroll-number ant-badge-count ant-badge-multiple-words"
    data-show="true"
    title="When hovering over badge"
  >
    <span
      class="ant-scroll-number-only"
      style="transition: none;"
    >
      <span
        class="ant-scroll-number-only-unit current"
      >
        5
      </span>
    </span>
    <span
      class="ant-scroll-number-only"
      style="transition: none;"
    >
      <span
        class="ant-scroll-number-only-unit current"
      >
        0
      </span>
    </span>
  </sup>
</span>
`;

exports[`Render required = true default - value[0] 1`] = `
<span
  class="ant-badge"
  id="default"
>
  <div
    data-testid="area-content"
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
</span>
`;

exports[`Render required = true properties.color - value[0] 1`] = `
<span
  class="ant-badge ant-badge-status"
  id="properties.color"
>
  <div
    data-testid="area-content"
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
</span>
`;

exports[`Render required = true properties.count - value[0] 1`] = `
<span
  class="ant-badge"
  id="properties.count"
>
  <div
    data-testid="area-content"
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
  <sup
    class="ant-scroll-number ant-badge-count ant-badge-multiple-words"
    data-show="true"
    title="50"
  >
    <span
      class="ant-scroll-number-only"
      style="transition: none;"
    >
      <span
        class="ant-scroll-number-only-unit current"
      >
        5
      </span>
    </span>
    <span
      class="ant-scroll-number-only"
      style="transition: none;"
    >
      <span
        class="ant-scroll-number-only-unit current"
      >
        0
      </span>
    </span>
  </sup>
</span>
`;

exports[`Render required = true properties.count: 0 - value[0] 1`] = `
<span
  class="ant-badge"
  id="properties.count: 0"
>
  <div
    data-testid="area-content"
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
</span>
`;

exports[`Render required = true properties.dot: true - value[0] 1`] = `
<span
  class="ant-badge"
  id="properties.dot: true"
>
  <div
    data-testid="area-content"
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
  <sup
    class="ant-scroll-number ant-badge-dot"
    data-show="true"
  />
</span>
`;

exports[`Render required = true properties.icon object - value[0] 1`] = `
<span
  class="ant-badge"
  id="properties.icon object"
>
  <div
    data-testid="area-content"
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
  <span
    class="anticon"
    role="img"
  >
    <svg
      data-testid="AiOutlineExclamationCircle"
    >
      {"id":"properties.icon object_icon","title":"AiOutlineNotification","className":"ant-scroll-number-custom-component","required":false,"style":{}}
    </svg>
  </span>
</span>
`;

exports[`Render required = true properties.icon string - value[0] 1`] = `
<span
  class="ant-badge"
  id="properties.icon string"
>
  <div
    data-testid="area-content"
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
  <span
    class="anticon"
    role="img"
  >
    <svg
      data-testid="AiOutlineExclamationCircle"
    >
      {"id":"properties.icon string_icon","title":"AiOutlineNotification","className":"ant-scroll-number-custom-component","required":false,"style":{}}
    </svg>
  </span>
</span>
`;

exports[`Render required = true properties.offset [x,y] - value[0] 1`] = `
<span
  class="ant-badge"
  id="properties.offset [x,y]"
>
  <div
    data-testid="area-content"
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
  <sup
    class="ant-scroll-number ant-badge-dot"
    data-show="true"
    style="margin-top: 10px; right: -25px;"
  />
</span>
`;

exports[`Render required = true properties.overflowCount - value[0] 1`] = `
<span
  class="ant-badge"
  id="properties.overflowCount"
>
  <div
    data-testid="area-content"
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
  <sup
    class="ant-scroll-number ant-badge-count ant-badge-multiple-words"
    data-show="true"
    title="15"
  >
    10+
  </sup>
</span>
`;

exports[`Render required = true properties.showZero - value[0] 1`] = `
<span
  class="ant-badge"
  id="properties.showZero"
>
  <div
    data-testid="area-content"
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
  <sup
    class="ant-scroll-number ant-badge-count"
    data-show="true"
    title="0"
  >
    0
  </sup>
</span>
`;

exports[`Render required = true properties.size: small - value[0] 1`] = `
<span
  class="ant-badge"
  id="properties.size: small"
>
  <div
    data-testid="area-content"
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
  <sup
    class="ant-scroll-number ant-badge-count ant-badge-count-sm ant-badge-multiple-words"
    data-show="true"
    title="11"
  >
    <span
      class="ant-scroll-number-only"
      style="transition: none;"
    >
      <span
        class="ant-scroll-number-only-unit current"
      >
        1
      </span>
    </span>
    <span
      class="ant-scroll-number-only"
      style="transition: none;"
    >
      <span
        class="ant-scroll-number-only-unit current"
      >
        1
      </span>
    </span>
  </sup>
</span>
`;

exports[`Render required = true properties.status: default - value[0] 1`] = `
<span
  class="ant-badge ant-badge-status"
  id="properties.status: default"
>
  <div
    data-testid="area-content"
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
</span>
`;

exports[`Render required = true properties.status: error - value[0] 1`] = `
<span
  class="ant-badge ant-badge-status"
  id="properties.status: error"
>
  <div
    data-testid="area-content"
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
</span>
`;

exports[`Render required = true properties.status: error and text: Error! - value[0] 1`] = `
<span
  class="ant-badge ant-badge-status"
  id="properties.status: error and text: Error!"
>
  <div
    data-testid="area-content"
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
</span>
`;

exports[`Render required = true properties.status: processing - value[0] 1`] = `
<span
  class="ant-badge ant-badge-status"
  id="properties.status: processing"
>
  <div
    data-testid="area-content"
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
</span>
`;

exports[`Render required = true properties.status: success - value[0] 1`] = `
<span
  class="ant-badge ant-badge-status"
  id="properties.status: success"
>
  <div
    data-testid="area-content"
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
</span>
`;

exports[`Render required = true properties.title: When hovering over badge - value[0] 1`] = `
<span
  class="ant-badge"
  id="properties.title: When hovering over badge"
>
  <div
    data-testid="area-content"
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
  <sup
    class="ant-scroll-number ant-badge-count ant-badge-multiple-words"
    data-show="true"
    title="When hovering over badge"
  >
    <span
      class="ant-scroll-number-only"
      style="transition: none;"
    >
      <span
        class="ant-scroll-number-only-unit current"
      >
        5
      </span>
    </span>
    <span
      class="ant-scroll-number-only"
      style="transition: none;"
    >
      <span
        class="ant-scroll-number-only-unit current"
      >
        0
      </span>
    </span>
  </sup>
</span>
`;

exports[`Test Schema default 1`] = `true`;

exports[`Test Schema default 2`] = `null`;

exports[`Test Schema properties.color 1`] = `true`;

exports[`Test Schema properties.color 2`] = `null`;

exports[`Test Schema properties.count 1`] = `true`;

exports[`Test Schema properties.count 2`] = `null`;

exports[`Test Schema properties.count: 0 1`] = `true`;

exports[`Test Schema properties.count: 0 2`] = `null`;

exports[`Test Schema properties.dot: true 1`] = `true`;

exports[`Test Schema properties.dot: true 2`] = `null`;

exports[`Test Schema properties.icon object 1`] = `true`;

exports[`Test Schema properties.icon object 2`] = `null`;

exports[`Test Schema properties.icon string 1`] = `true`;

exports[`Test Schema properties.icon string 2`] = `null`;

exports[`Test Schema properties.offset [x,y] 1`] = `true`;

exports[`Test Schema properties.offset [x,y] 2`] = `null`;

exports[`Test Schema properties.overflowCount 1`] = `true`;

exports[`Test Schema properties.overflowCount 2`] = `null`;

exports[`Test Schema properties.showZero 1`] = `true`;

exports[`Test Schema properties.showZero 2`] = `null`;

exports[`Test Schema properties.size: small 1`] = `true`;

exports[`Test Schema properties.size: small 2`] = `null`;

exports[`Test Schema properties.status: default 1`] = `true`;

exports[`Test Schema properties.status: default 2`] = `null`;

exports[`Test Schema properties.status: error 1`] = `true`;

exports[`Test Schema properties.status: error 2`] = `null`;

exports[`Test Schema properties.status: error and text: Error! 1`] = `true`;

exports[`Test Schema properties.status: error and text: Error! 2`] = `null`;

exports[`Test Schema properties.status: processing 1`] = `true`;

exports[`Test Schema properties.status: processing 2`] = `null`;

exports[`Test Schema properties.status: success 1`] = `true`;

exports[`Test Schema properties.status: success 2`] = `null`;

exports[`Test Schema properties.title: When hovering over badge 1`] = `true`;

exports[`Test Schema properties.title: When hovering over badge 2`] = `null`;
